Fix more text wrapping

--- a/css/highlight.css
+++ b/css/highlight.css
@@ -41,5 +41,5 @@ pre code {
   line-height: 1.5;
   border: 1px solid #ccc;
   padding: 10px;
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
